# aegis-tunnel

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  aegis-client.conf  aegis-tunnel-keygen  aegis.conf
deploy/: aegis-client.conf  aegis-server.conf  aegis-tunnel@.service  client.conf.example  install.sh  server.conf.example  tun-client.conf.example  tun-server.conf.example  wg0-client.conf  wg0-server.conf
docs/: architecture.md  known-issues.md  protocol.md  roadmap.md  testing.md
scripts/: test-all.sh
src/: config_mgmt.c  config_mgmt.h  keygen.c  main.c  main.h  mode_common.c  mode_common.h  mode_psk.c  mode_socks5.c  mode_tun.c  mode_tun_udp.c
src/crypto/: aegis.c  aegis.h
src/crypto/neon/: aegis128-armcrypto.c  aegis128-armcrypto.h  aegis128-plain.c  aegis128-plain.h
src/crypto/x86/: aegis128-x86.c  aegis128-x86.h
src/protocol/: ecdh.c  ecdh.h  frame_reader.c  frame_reader.h  handshake.c  handshake.h  keyfile.c  keyfile.h  tofu.c  tofu.h
src/proxy/: socks5.c  socks5.h
src/tunnel/: threadpool.c  threadpool.h  tun.c  tun.h  tunnel.c  tunnel.h
src/util/: config.c  config.h  iniconfig.c  iniconfig.h  log.c  log.h  util.c  util.h
tests/: bench_aegis.c  e2e_test.c  test_aegis.c  test_asymmetric.c  test_tunnel.c
